<resources>
    <!-- App info -->
    <string name="app_name" translatable="false">Mentalism</string>
    <string name="app_title" translatable="false">Mentalism Magic</string>

    <!-- messages -->
    <string name="back_again_message">Press back again to exit</string>

    <!-- Buttons -->
    <string name="start">Start</string>
    <string name="guide">Guide</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="shuffle">Shuffle</string>
    <string name="ok">OK</string>
    <string name="practice">Practice</string>
    <string name="end_trick">End</string>

    <!-- Files -->
    <string name="file_name_cities">citiesEN.txt</string>
    <string name="file_name_fruits">fruitsEN.txt</string>
    <string name="file_name_colours">coloursEN.txt</string>
    <string name="file_name_celebrities">celebritiesEN.txt</string>

    <string name="file_name_videogames" translatable="false">videogames.txt</string>

    <string name="file_alphabet" translatable="false">alphabet.txt</string>
    <string name="file_product_id_null" translatable="false">null</string>

    <!-- Menu management -->
    <string name="guide_id" translatable="false">menu</string>
    <string name="guide_is_hidden">Menu is now hidden</string>
    <string name="guide_hide">Hide menu button</string>

    <!-- Highlight management -->
    <string name="highlight_id" translatable="false">highlight</string>

    <!-- Menu' -->
    <string name="menu_title">Magician menu</string>
    <string name="menu_button">Menu</string>
    <string name="highlight">Highlight selected word</string>

    <!-- Guide -->
    <string name="guide_trick_1">1/11 \n\n Trick explained \n\n Give the phone to the viewer and let him chose a word. If he wants he can shuffle as much as he wants</string>
    <string name="guide_trick_2">2/11 \n\n Trick explained \n\n Ask the viewer to read all the words out loud in the order he prefers. You will be able to guess the word he chose</string>
    <string name="guide_1">3/11 \n\n The secret \n\n Each word is divided into two categories: straight words and curved words</string>
    <string name="guide_2">4/11 \n\n The secret \n\n Straight words are words whose first letter can be drawn using only straight lines</string>
    <string name="guide_3">5/11 \n\n The secret \n\n Curved words are words whose first letter contains at least one curved line</string>
    <string name="guide_4">6/11 \n\n The secret \n\n Note that each letter has to be considered as UPPERCASE in a standard font</string>
    <string name="guide_5">7/11 \n\n The secret \n\n If the viewer chooses a straight word the app will show 9 curved words and a straight one (the one chosen by the viewer) and the other way around</string>
    <string name="guide_example_1">8/11 \n\n Example \n\n Words in the straight line category are Tokyo, Manila, Instambul...</string>
    <string name="guide_example_2">9/11 \n\n Example \n\n Words in the curved line category are Beijing, Rome, Calcutta...</string>
    <string name="guide_group_straight">10/11 \n\n Straight letters \n\n A, E, F, H, I, K, L, M, N, T, V, W, X, Y, Z</string>
    <string name="guide_group_curved">11/11 \n\n Curved letters \n\n B, C, D, G, J, O, P, Q, R, S, U</string>
</resources>
