<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Guide"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

    <TextSwitcher
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/ts_guide"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/button_back"
            android:onClick="changeTextBackward"
            android:layout_gravity="center"
            android:layout_weight="1"
            style="@style/ButtonDesign"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/button_next"
            android:onClick="changeText"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            style="@style/ButtonDesign"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/practice"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:onClick="startPractice"
        style="@style/ButtonDesign"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide_hide"
            style="@style/TextDesign"
            android:textSize="20sp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="center" />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="checkHideGuideButton"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:id="@+id/switch_guide_button"/>
    </LinearLayout>

</LinearLayout>