<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:context=".MainActivity"
        android:layout_marginTop="128dp">

        <TextView
            style="@style/TextDesign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:text="@string/app_title"
            android:textAlignment="center"
            android:textSize="62sp" />

        <Button
            style="@style/ButtonDesign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:onClick="start"
            android:text="@string/start"
            android:textSize="35sp"/>
    </LinearLayout>

    <Button
        style="@style/ButtonDesign"
        android:id="@+id/button_menu"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:onClick="guide"
        android:text="@string/menu_button"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"/>
</RelativeLayout>