<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <TextView
        style="@style/TextDesign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/menu_title"
        android:textAlignment="center"
        android:textSize="62sp"
        android:layout_marginTop="60dp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide_hide"
            style="@style/TextDesign"
            android:textSize="20sp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="center" />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="checkHideGuideButton"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/switch_guide_button"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/highlight"
            style="@style/TextDesign"
            android:textSize="20sp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="center" />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="checkHighlight"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/switch_highlight"/>
    </LinearLayout>

    <Button
        style="@style/ButtonDesign"
        android:id="@+id/button_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:onClick="guide"
        android:text="@string/guide"
        android:layout_gravity="center"/>

    <Button
        style="@style/ButtonDesign"
        android:id="@+id/button_custom_words"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:onClick="goToCustomWords"
        android:text="custom words"
        android:layout_gravity="center"/>

</LinearLayout>